# Database-Management-System

./: .gitignore  CMakeLists.txt  README.md
include/: database.h
src/: database.cpp  main.cpp
tests/: test_database.cpp
